[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "libdmet"
version = "0.0.1"
authors = [
  { name="Zhihao Cui" }
]
description = "A library of density matrix embedding theory (DMET) for lattice models and realistic solids."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  'pyscf >= 2.0',
]

[project.urls]
"Homepage" = "https://github.com/gkclab/libdmet_preview"
"Bug Tracker" = "https://github.com/gkclab/libdmet_preview/issues"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
